[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/SaveLoad.gd" type="Script" id=1]

[node name="SaveLoadUI" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -590.0
rect_min_size = Vector2( 0, 50 )
alignment = 1
script = ExtResource( 1 )

[node name="Save" type="Button" parent="."]
margin_left = 66.0
margin_right = 126.0
margin_bottom = 50.0
rect_min_size = Vector2( 60, 30 )
text = "Save"
flat = true

[node name="Load" type="Button" parent="."]
margin_left = 130.0
margin_right = 190.0
margin_bottom = 50.0
rect_min_size = Vector2( 60, 30 )
text = "Load"
flat = true

[node name="Reset" type="Button" parent="."]
margin_left = 194.0
margin_right = 254.0
margin_bottom = 50.0
rect_min_size = Vector2( 60, 30 )
text = "Reset"
flat = true

[connection signal="pressed" from="Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="Reset" to="." method="_on_Reset_pressed"]
